--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,8 @@
 <string name="error_password_match">Password Does Not Matches</string>
 <string name="error_valid_username_password">Wrong Username or Password</string>
 <string name="text_member">Already a member? Login</string>
+    <string name="Dagsplan">Dagsplan</string>
+    <string name="Vækning">Vækning</string>
+    <string name="Beskeder">Beskeder</string>
+    <string name="Vagtplan">Vagtplan</string>
 </resources>
