--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="delete_wakeup">Delete wakeup</string>
     <string name="Kontakt">Kontakt</string>
     <string name="Vækning">Vækning</string>
+    <string name="my_wakeup">My Wakeup</string>
     <string name="Beskeder">Beskeder</string>
     <string name="Vagtplan">Vagtplan</string>
     <string name="refresh">Refresh</string>
